# tieto-lang

./: CMakeLists.txt  README.md  test.tiet
apps/tietoc/: CMakeLists.txt
apps/tietoc/include/: ast-viewer.hpp  expr.hpp  lexer.hpp  parser.hpp  token.hpp
apps/tietoc/src/: lexer.cpp  main.cpp  parser.cpp
common/: CMakeLists.txt
common/include/common/: errors.hpp  poolalloc.hpp  utils.hpp  value.hpp
common/src/: utils.cpp
